<resources>
    <string name="app_name">Pare e Pague</string>
    <string name="codigo_do_cupom">Código do cupom:</string>
    <string name="end">Finalizar</string>
    <string name="clear">Limpar</string>
    <string name="cell">Telefone</string>
    <string name="mmloterias">M M LOTERIAS</string>
    <string name="login">Login</string>
    <string name="senha">Senha</string>
    <string name="buttonEntrar">Entrar</string>
    <string name="title_activity_tela_home">TelaHome</string>
    <string name="bem_vindo">Bem Vindo(a)!</string>
    <string name="nome"></string>
    <string name="nova_aposta">Nova Aposta</string>
    <string name="visualizar_apostas"></string>
    <string name="estornar"></string>
    <string name="data_hora"></string>
    <string name="data_hora_texto">Data e hora atual: </string>
    <string name="fazer_login">Para solicitar um login entre em contato com o Administrador</string>

    <string name="menu_conta">Meu perfil</string>
    <string name="menu_logout">Sair</string>
    <string name="menu_admin">Painel administrador</string>
    <string name="voltar">Voltar</string>

    <string name="inserir_aposta">OK</string>
    <string name="extracao">Selecione o sorteio: </string>
    <string name="voce_esta_apostando">Atenção! Você esta apostando com o usuario: </string>
    <string name="tipo_aposta">Selecione o tipo da aposta: </string>
    <string name="tipo_aposta2">Selecione o modo da aposta: </string>
    <string name="tipo_premiacao">Selecione a premiação: </string>
    <string name="ate"> a </string>
    <string name="ok">Confirmar</string>
    <string name="palpite">Digite ou selecione seu palpite: </string>
    <string name="valor">Valor da aposta: </string>
    <string name="poule">Número da Aposta: </string>
    <string name="inserir">Inserir palpite </string>
    <string name="confirmar">Confirmar aposta </string>
    <string name="limpar">Limpar </string>
    <string name="aposta_rec">Tipo de aposta</string>
    <string name="finalizar_apostas">Finalizar aposta</string>
    <string name="nome1">Nome: </string>
    <string name="login1">Login: </string>
    <string name="carteira">Carteira: </string>

    <string name="procurar_impressoras">Procurar impressoras: </string>
    <string name="ligar_blt2">Ligar Bluetooth</string>
    <string name="ligar_blt">Procurar dispositivo</string>
    <string name="enviar_sms">Enviar poule via sms</string>
    <string name="imprimir">Realizar impressão</string>
    <string name="voltar_home">Home</string>
    <string name="connect">Conectar</string>


    <string name="estornar2">Estornar - Cancelar</string>
    <string name="resultados">Resultados</string>
    <string name="resultados2">RESULTADOS</string>
    <string name="data_hora_texto2">Data e hora da aposta: </string>
    <string name="aposta">Aposta: </string>
    <string name="horario">Horario da aposta: </string>


    <string name="atencao">APOSTA SALVA</string>
    <string name="sorteios">Sorteio: </string>
    <string name="aposta_modo">Modo de aposta: </string>
    <string name="premiacao">Premiação: </string>
    <string name="valor_apostado">Valor apostado: R$</string>
    <string name="seu_palpite">O número apostado foi: </string>
    <string name="seu_palpite2">Palpite</string>
    <string name="numero_aposta">Recibo: </string>
    <string name="valor_total">Valor total: </string>
    <string name="multiplos">Para multiplas apostas, basta dar espaço entre os números </string>
    <string name="nsu">Número da poule</string>
    <string name="cancelar_aposta">Cancelar Aposta</string>


    <string-array name="array_extracao_opcoes">
        <item>11 Horas - PT RIO</item>
        <item>Alvorada</item>
        <item>14 Horas - PT RIO</item>
        <item>Dia</item>
        <item>Federal</item>
        <item>Preferida</item>
    </string-array>

    <string-array name="array_numero">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
    </string-array>

    <string-array name="array_tipo_aposta2">
        <item>Milhar</item>
        <item>Centena</item>
        <item>Dezena</item>
        <item>Unidade</item>
        <item>Passe</item>
        <item>Grupo</item>
    </string-array>

    <string-array name="array_milhar">
        <item>Milhar</item>
        <item>Milhar 1º ao 5º</item>
        <item>Milhar invertida</item>
        <item>Milhar centena</item>
        <item>Milhar centena invertida</item>
    </string-array>

    <string-array name="array_centena">
        <item>Centena</item>
        <item>Centena 1º ao 5º</item>
        <item>Centena esquerda</item>
        <item>Centena invertida</item>
        <item>Centena esquerda invertida</item>
        <item>Centena direita e esquerda</item>

    </string-array>


    <string-array name="array_dezena">
        <item>Dezena</item>
        <item>Terno de dezena</item>
        <item>Terno dezena meio</item>
        <item>Terno dezena esquerda</item>
        <item>Terno dezena e MD</item>
        <item>Terno dezena invertido</item>
        <item>TDZ esquerda invertida</item>
        <item>TDZ meio invertido</item>
        <item>TDZ e MD invertido</item>
        <item>Duque dezena</item>
        <item>Duque dezena meio</item>
        <item>Duque dezena esquerda</item>
        <item>Duque dezena MD</item>
        <item>Duque dezena invertida</item>
        <item>Quadra de esquerda</item>
        <item>Quadra meio</item>
        <item>Quadra e MD</item>
        <item>Quina esquerda</item>
        <item>Quina meio</item>
        <item>Quina e MD</item>
        <item>Sena de dezena</item>
    </string-array>

    <string-array name="array_unidade">
        <item>Unidade</item>
    </string-array>

    <string-array name="array_grupo">
        <item>Grupo</item>
        <item>Grupo esquerda</item>
        <item>Grupo milhar dezena</item>

        <item>Terno grupo</item>
        <item>Terno esquerda</item>
        <item>Terno meio</item>
        <item>Terno e MD</item>
        <item>Terno invertido</item>
        <item>Terno esquerdo invertido</item>
        <item>Terno meio invertido</item>
        <item>Terno e MD invertido</item>

        <item>Quadra de grupo</item>

        <item>Quina de grupo</item>

        <item>Sena de grupo</item>
    </string-array>


    <string-array name="array_passe">
        <item>Passe</item>
        <item>Passe invertido</item>
        <item>Passe esquerdo</item>
        <item>Passe meio</item>
        <item>Passe e MD</item>
        <item>Passe esquerdo invertido</item>
        <item>Passe meio invertido</item>
        <item>Passe e MD invertido</item>
    </string-array>


    <string-array name="array_jogo">
        <item>01 AVESTRUZ 01-02-03-04</item>
        <item>02 AGUIA 05-06-07-08</item>
        <item>03 BURRO 09-10-11-12</item>
        <item>04 BORBOLETA 13-14-15-16</item>
        <item>05 CACHORRO 17-18-19-20</item>
        <item>06 CABRA 21-22-23-24</item>
        <item>07 CARNEIRO 25-26-27-28</item>
        <item>08 CAMELO 29-30-31-32</item>
        <item>09 COBRA 33-34-35-36</item>
        <item>10 COELHO 37-38-39-40</item>
        <item>11 CAVALO 41-42-43-44</item>
        <item>12 ELEFANTE 45-46-47-48</item>
        <item>13 GALO 49-50-51-52</item>
        <item>14 GATO 53-54-55-56</item>
        <item>15 JACARÉ 57-58-59-60</item>
        <item>16 LEÃO 61-62-63-64</item>
        <item>17 MACACO 65-66-67-68</item>
        <item>18 PORCO 69-70-71-72</item>
        <item>19 PAVÃO 73-74-75-76</item>
        <item>20 PERU 77-78-79-80</item>
        <item>21 TOURO 81-82-83-84</item>
        <item>22 TIGRE 85-86-87-88</item>
        <item>23 URSO 89-90-91-92</item>
        <item>24 VEADO 93-94-95-96</item>
        <item>25 VACA 97-98-99-00</item>
    </string-array>

    <string-array name="array_tipo_aposta">
        <item>Milhar</item>
        <item>Milhar centena</item>
        <item>Milhar invertida</item>
        <item>Milhar 1º ao 5º</item>
        <item>MC invertida</item>
        <item>Centena</item>
        <item>Centena esquerda</item>
        <item>Centena direita e esquerda</item>
        <item>Centena invertida</item>
        <item>Centena 1º ao 5º</item>
        <item>Centena esquerda invertida</item>
        <item>Dezena</item>
        <item>Grupo</item>
        <item>Grupo esquerda</item>
        <item>Grupo MD</item>
        <item>Terno de dezena</item>
        <item>Terno dezena meio</item>
        <item>Terno dezena esquerda</item>
        <item>Terno dezena e M D</item>
        <item>Terno dezena invertido</item>
        <item>Terno grupo</item>
        <item>Terno esquerda</item>
        <item>Terno meio</item>
        <item>Terno e M D</item>
        <item>Terno invertido</item>
        <item>Terno esquerdo invertido</item>
        <item>Terno meio invertido</item>
        <item>Terno e M D invertido</item>
        <item>Duque dezena</item>
        <item>Duque dezena meio</item>
        <item>Duque dezena esquerda</item>
        <item>Duque dezena M D</item>
        <item>Duque dezena invertida</item>
        <item>Unidade</item>
        <item>Quadra de grupo</item>
        <item>Quina de grupo</item>
        <item>Sena de grupo</item>
        <item>Sena de dezena</item>
        <item>Quadra de esquerda</item>
        <item>Quadra meio</item>
        <item>Quadra e M D</item>
        <item>Quina esquerda</item>
        <item>Quina meio</item>
        <item>Quina e M D</item>
        <item>TDZ esquerda invertida</item>
        <item>TDZ meio invertido</item>
        <item>TDZ e M D invertido</item>
        <item>Passe invertido</item>
        <item>Passe</item>
        <item>Passe esquerdo</item>
        <item>Passe meio</item>
        <item>Passe e M D</item>
        <item>Passe esquerdo invertido</item>
        <item>Passe meio invertido</item>
        <item>Passe e MD invertido</item>

    </string-array>
    <string name="title_activity_tela_finalizar_aposta">TelaFinalizarAposta</string>
    <string name="title_activity_tela_estornar">TelaEstornar</string>
    <string name="title_activity_tela_finalizar_aposta_novo">TelaFinalizarApostaNovo</string>

</resources>

