<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <TextView
            android:id="@+id/txtNsu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5sp"
            android:text="NewText"
            android:textSize="15sp" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout1"
        android:layout_marginTop="30sp">


        <Button
            android:id="@+id/ligar_blt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="mEnableBtn"
            android:text="@string/ligar_blt2" />

        <Button
            android:id="@+id/procurar_blt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ligar_blt"
            android:onClick="pesquisarDispositivos"
            android:text="@string/ligar_blt" />

        <TextView
            android:id="@+id/textView27"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/procurar_blt"
            android:layout_marginTop="15sp"
            android:text="@string/procurar_impressoras"
            android:textSize="15sp" />

        <RelativeLayout
            android:id="@+id/RelativeLayoutExtra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView27"
            android:layout_marginTop="30sp">

            <Button
                android:id="@+id/connect_blt"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:text="@string/connect"
                android:onClick="mConnectBtn"
                />

            <Spinner
                android:id="@+id/spDispositivos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/connect_blt"
                android:layout_toLeftOf="@+id/connect_blt"
                android:layout_alignParentTop="true"

                />

        </RelativeLayout>

        <Button
            android:id="@+id/button15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/RelativeLayoutExtra"
            android:onClick="mPrintTextBtn"
            android:text="@string/imprimir"
            />

    </RelativeLayout>



    <!-- -->
    <RelativeLayout
        android:id="@+id/relative_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/relativeLayout2"
        android:visibility="visible">
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="TICKET DE ENTRADA \n ANTECIPADO"
        android:textSize="20sp"
        android:textAlignment="center"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="30dp"
        android:layout_below="@+id/relative_title"
        android:layout_marginRight="30dp">

        <TextView
            android:id="@+id/textView_Cupom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="CUPOM:"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView_Data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_Cupom"
            android:text="DATA-HORA:"
            android:textSize="18sp" />

        <RelativeLayout
            android:id="@+id/relative_Placa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_Data"
            android:layout_centerVertical="true">

            <TextView
                android:id="@+id/textView_Placa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="PLACA:"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_centerInParent="true"
                android:layout_toRightOf="@+id/textView_Placa" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relative_Rua"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relative_Placa"
            android:layout_centerVertical="true">

            <TextView
                android:id="@+id/textView_Rua"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="RUA:"
                android:textSize="20sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_centerInParent="true"
                android:layout_toRightOf="@+id/textView_Rua" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relative_Rua"
            android:layout_centerVertical="true">

            <TextView
                android:id="@+id/textView_Fone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="FONE:"
                android:textSize="20sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_centerInParent="true"
                android:layout_toRightOf="@+id/textView_Fone" />
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>    </ScrollView>
